<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top"
        android:orientation="vertical" >

        <com.stexgroup.novinki.customviews.TextViewMainTheme
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/novinki_logo"
            android:textColor="@color/white"
            android:textSize="50sp" />

        <com.stexgroup.novinki.customviews.TextViewMainTheme
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/novinki_baza_ot"
            android:textColor="@color/white"
            android:textSize="10sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/list_view_working_time"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-1dp"
        android:layout_weight="4" >
    </ListView>

    <com.stexgroup.novinki.customviews.TextViewMainTheme
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/working_tine_button_hint"
        android:textColor="@color/black"
        android:textSize="10sp" />

    <com.stexgroup.novinki.customviews.TextViewMainTheme
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/working_time_hint2"
        android:textColor="@color/black"
        android:textSize="10sp" />

</LinearLayout>